--- a/cart/src/lib/cart-route/cart-route.component.html
+++ b/cart/src/lib/cart-route/cart-route.component.html
@@ -1,4 +1,4 @@
 <div class="cart-route">
-  <store-banner [text]="'Welcome to the cart.'"></store-banner>
+  <store-banner [text]="'Hello, Welcome to the cart.'"></store-banner>
   <a routerLink="/">Continue Shopping</a>
 </div>
