--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,4 +1,4 @@
 <div class="shop">
-  <store-banner [text]="'here is a list of products to buy...'"></store-banner>
+  <store-banner [text]="'Here is a list of products to buy...'"></store-banner>
   <a routerLink="/cart">View Cart</a>
 </div>
