--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<store-nx-welcome></store-nx-welcome> <router-outlet></router-outlet>
+<div class="app">
+  <main class="app__content">
+    <router-outlet></router-outlet>
+  </main>
+</div>
